[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/PlayerKeyboard.gd" type="Script" id=1]

[node name="Keyboard" type="Node2D"]
script = ExtResource( 1 )

[node name="Shoot" type="Button" parent="."]
margin_left = 430.406
margin_right = 480.406
margin_bottom = 50.0
text = "Shoot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Button" parent="Buttons"]
margin_right = 36.0
margin_bottom = 50.0
text = "Left"

[node name="Right" type="Button" parent="Buttons"]
margin_left = 40.0
margin_right = 84.0
margin_bottom = 50.0
text = "Right"

[node name="Label" type="Label" parent="."]
margin_left = 216.505
margin_top = 20.2271
margin_right = 257.505
margin_bottom = 34.2271
text = "SCORE"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Shoot" to="." method="_on_Shoot_pressed"]
[connection signal="button_down" from="Buttons/Left" to="." method="_on_Left_button_down"]
[connection signal="button_up" from="Buttons/Left" to="." method="_on_Left_button_up"]
[connection signal="button_down" from="Buttons/Right" to="." method="_on_Right_button_down"]
[connection signal="button_up" from="Buttons/Right" to="." method="_on_Right_button_up"]
